init pour HNU6051

--- a/themes/roman/assets/scss/impression-h.scss
+++ b/themes/roman/assets/scss/impression-h.scss
@@ -125,7 +125,7 @@
     width: 152px;
     height: 12px;
     margin: .5em auto 0;
-    background: url(/images/divider.svg) no-repeat top center;
+    background: url(/images/logo.png) no-repeat top center;
   }
   .couverture h4::after {
     content: "";
