--- a/themes/roman/layouts/_default/list.html
+++ b/themes/roman/layouts/_default/list.html
@@ -5,6 +5,7 @@
   <header class="site-masthead">
     <h1>{{ .Site.Params.titre }}</h1>
     <h2>{{ .Site.Params.auteur }}</h2>
+    <img src="{{ .Site.Params.logo }}"/>
   </header>
   <main class="home" id="main" role="main" aria-label="Content">
     <h1 class="content-title divided">Contents</h1>
