--- a/themes/roman/layouts/section/print.html
+++ b/themes/roman/layouts/section/print.html
@@ -18,7 +18,7 @@
     {{end}}
     {{ if eq .Site.Params.quatrieme "oui" }}
     <section class="derniere">
-      <p>{{ .Site.Params.licence }} {{ .Site.Params.auteur }}</p>
+      <p style="text-align: center;">{{ .Site.Params.licence }} {{ .Site.Params.auteur }}</p>
       <p>{{ .Site.Params.isbn }}</p>
     </section>
     {{ end }}
