--- a/themes/roman/assets/scss/impression.scss
+++ b/themes/roman/assets/scss/impression.scss
@@ -123,7 +123,7 @@
     width: 152px;
     height: 12px;
     margin: .5em auto 0;
-    background: url(/images/divider.svg) no-repeat top center;
+    background: url(images/divider.svg) no-repeat top center;
   }
   .couverture h4::after {
     content: "";
