--- a/themes/roman/layouts/_default/list.html
+++ b/themes/roman/layouts/_default/list.html
@@ -3,12 +3,12 @@
   {{ partial "head.html" . }}
 <body>
   <header class="site-masthead">
-    <h1>{{ .Site.Params.titre }}</h1>
+    <h1 class="gothic">{{ .Site.Params.titre }}</h1>
     <h2>{{ .Site.Params.auteur }}</h2>
-    <img src="{{ .Site.Params.logo }}"/>
+    <img src="{{ .Site.Params.logo }}" style="width: 350px;">
   </header>
   <main class="home" id="main" role="main" aria-label="Content">
-    <h1 class="content-title divided">Contents</h1>
+    <h1 class="content-title divided">Contenus</h1>
       <ul class="post-list">
         {{ range (.Paginate ( where .Site.RegularPages "Section" "posts" ).ByWeight).Pages }}
           {{ if ne .Kind "section" }}
@@ -17,6 +17,7 @@
               <div class="post-link__heading">
                 <h1 class="post-link__title">{{ .Params.Chapter }}</h1>
               </div>
+              <span class="post-editor">{{ .Params.Editor }}</span>
               <span class="post-date">{{ .Title }}</span>
             </a>
           </li>
