--- a/themes/roman/layouts/_default/single.html
+++ b/themes/roman/layouts/_default/single.html
@@ -7,7 +7,8 @@
   <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting" id="main" role="article" aria-label="Content">
 
       {{ if eq .Type "posts" }}
-      <h1 class="post-title divided p-name" itemprop="name headline">{{ .Params.Chapter }} - {{ .Title }}</h1>
+      <h1 class="post-title divided p-name" itemprop="name headline">{{ .Params.Chapter }} - {{ .Title }}<span class="post-editor">{{ .Params.Editor }}</span></h1>
+      
       <!-- <div class="post-meta">
         <a href="impression.html">Version imprimable</a>
       </div> -->
