--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -682,7 +682,7 @@ figcaption {
 .content-title {
   font-size: 2em;
   margin-bottom: 2em;
-  text-align: center;
+  text-align: justify;
 }
 
 .post-date {
