--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -841,7 +841,7 @@ figcaption {
 
   .post-link__heading {
     display: block;
-    text-align: left;
+    text-align: center;
 
     @media (min-width: $on-tablet) {
       padding: .25em 0;
