--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -168,10 +168,10 @@ select {
 }
 
 // variables
-$brand-color: #ffffff;
+$brand-color: #cc1212;
 $highlight: lighten($brand-color, 35%);
 $text-color: #0b0404;
-$muted-text-color: #64644B;
+$muted-text-color: #ff9100;
 $font-family: "EB Garamond",
 Garamond,
 "Times New Roman",
