--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -171,7 +171,7 @@ select {
 $brand-color: #74b3ee;
 $highlight: lighten($brand-color, 35%);
 $text-color: #0b0404;
-$muted-text-color: #ff9100;
+$muted-text-color: #ff008c;
 $font-family: "EB Garamond",
 Garamond,
 "Times New Roman",
