--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -968,6 +968,7 @@ figcaption {
     font-weight: 700;
     padding: 0 .75em;
     margin: 0 .25em;
+    $text-color: #eb1b1b;
 
     &:hover,
     &:focus {
