--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -893,7 +893,7 @@ figcaption {
 
   // article
   .post {
-    background: white;
+    background: rgb(185, 137, 212);
     margin: 2em auto;
     max-width: 60rem;
     padding: 2em 0;
