--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -168,10 +168,10 @@ select {
 }
 
 // variables
-$brand-color: #74b3ee;
+$brand-color: #90c2f1;
 $highlight: lighten($brand-color, 35%);
 $text-color: #0b0404;
-$muted-text-color: #ff008c;
+$muted-text-color: #ff0095;
 $font-family: "EB Garamond",
 Garamond,
 "Times New Roman",
