--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -800,7 +800,7 @@ figcaption {
 
   // post-list
   .post-list {
-    margin: 1em 0;
+    margin: .5em 0;
     list-style: none;
 
     &:hover,
@@ -812,7 +812,7 @@ figcaption {
   }
 
   .post-list li {
-    margin-bottom: 1em;
+    margin-bottom: .5em;
   }
 
   .post-link {
