--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -816,7 +816,7 @@ figcaption {
   }
 
   .post-link {
-    color: $text-color;
+    color: rgb(0, 26, 255);
     display: flex;
     flex-direction: row;
     text-decoration: none;
