--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -192,7 +192,7 @@ code.highlighter-rouge {
 }
 
 .highlight {
-  background: #fff;
+  background: #ff8800;
   font-family: courier, monospace;
   font-size: .875em;
   margin: 2rem auto;
@@ -816,7 +816,7 @@ figcaption {
   }
 
   .post-link {
-    color: rgb(0, 26, 255);
+    color: rgb(255, 115, 0);
     display: flex;
     flex-direction: row;
     text-decoration: none;
