--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -177,6 +177,8 @@ Garamond,
 "Times New Roman",
 serif;
 $font-family2: "Old London";
+$linkcolor: #ff0095;
+$urlcolor: #ff0095;
 
 
 $on-bigphone: 375px;
