--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -950,7 +950,7 @@ figcaption {
   .post-meta {
     margin-bottom: 2em;
     margin-top: 2em;
-    text-align: right;
+    text-align: left;
   }
 
   .back-link {
