--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -169,7 +169,7 @@ select {
 
 // variables
 $brand-color: #90c2f1;
-$highlight: lighten($brand-color, 35%);
+$highlight: lighten($linkcolor, 35%);
 $text-color: #0b0404;
 $muted-text-color: #ff0095;
 $font-family: "EB Garamond",
@@ -177,7 +177,7 @@ Garamond,
 "Times New Roman",
 serif;
 $font-family2: "Old London";
-$linkcolor: #ff0095;
+$linkcolor: #09ff00;
 $urlcolor: #ff0095;
 
 
