--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -175,7 +175,7 @@ $muted-text-color: #ff0095;
 $font-family: "EB Garamond",
 Garamond,
 "Times New Roman",
-serif;
+serif;j
 $font-family2: "Old London";
 $linkcolor: #09ff00;
 $urlcolor: #ff0095;
