--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -623,8 +623,8 @@ a:focus {
 
 blockquote {
   margin: 2em auto;
-  opacity: .8;
-  color: #ffa600;
+  opacity: 1;
+  color: #ff9100;
 
   >* {
     padding: 0 3em;
