--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -971,7 +971,7 @@ figcaption {
     font-weight: 700;
     padding: 0 .75em;
     margin: 0 .25em;
-    $text-color: #ff0000;
+    color: #ff0000;
 
     &:hover,
     &:focus {
@@ -984,7 +984,7 @@ figcaption {
     content: '';
     @include divider;
     margin: 1em auto;
-    $text-color: #ff0000;
+    color: #ff0000;
   }
 
   .footnotes {
