--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -989,15 +989,18 @@ figcaption {
 
   .footnotes {
     margin-bottom: 4em;
+    color: #ff0000;
   }
 
   .footnotes li {
     margin-bottom: 1em;
+    color: #ff0000;
   }
 
   .reversefootnote {
     font-size: .75em;
     opacity: .75;
+    color: #ff0000;
   }
 
   // search
