--- a/themes/roman/layouts/_default/single.impression.html
+++ b/themes/roman/layouts/_default/single.impression.html
@@ -9,7 +9,7 @@
 
       {{ if eq .Type "posts" }}
       <h2 itemprop="name headline" class="subtitle">{{ .Title }}</h2>
-      <h3>{{ <div class="Editor"></div> }}</h3>
+      <h3>{{ .Description }}</h3>
       <p class="meta">
         </p>
       {{ end }}
