--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -838,7 +838,7 @@ figcaption {
       justify-content: space-between;
 
       .post-date {
-        margin-left: auto;
+        margin-right: auto;
       }
     }
   }
