--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -169,7 +169,7 @@ select {
 
 // variables
 $brand-color: linear-gradient(blue, red);
-$highlight: lighten($brand-color, 35%);
+$highlight: lighten(red, 35%);
 $text-color: #0b0404;
 $muted-text-color: #ff0095;
 $font-family: "EB Garamond",
