--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -131,7 +131,8 @@ table {
 }
 
 hr {
-  display: block;
+  //display: block;
+  display: none;
   height: 1px;
   border: 0;
   border-top: 1px solid #ccc;
