--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -525,14 +525,14 @@ code.highlighter-rouge {
   border: 0;
   display: block;
   width: 102px;
-  height: 112px;
+  //height: 112px;
   margin: .5em auto 0;
   background: url(images/divider.svg) no-repeat top center;
 }
 
 // font
 @font-face {
-  font-family: 'EB Garamond';
+  font-family: 'Eb Garamond';
   font-style: normal;
   font-weight: 400;
   font-display: auto;
