--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -532,7 +532,7 @@ code.highlighter-rouge {
 
 // font
 @font-face {
-  font-family: 'Eb Garamond';
+  font-family: 'EB Garamond';
   font-style: normal;
   font-weight: 400;
   font-display: auto;
