--- a/themes/roman/layouts/_default/list.html
+++ b/themes/roman/layouts/_default/list.html
@@ -5,7 +5,7 @@
   <header class="site-masthead">
     <h1 class="gothic">{{ .Site.Params.titre }}</h1>
     <h2>{{ .Site.Params.auteur }}</h2>
-    <h3>{{ .Site.Params.date }}</h3>
+    <h3>{{ .Site.Params.introduction }}</h3>
     <img src="{{ .Site.Params.logo }}" style="width: 350px;">
   </header>
   <main class="home" id="main" role="main" aria-label="Content">
