--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -583,6 +583,9 @@ h3 {
   font-size: 1.5em;
   margin: 1.3333em auto;
   text-align: center;
+  font-style: italic;
+  font-family: $font-family2;
+  color:rgb(20, 4, 231);
 }
 
 h4 {
