--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -923,7 +923,7 @@ figcaption {
   }
 
   .post p {
-    text-align: justify;
+    text-align: left;
     text-indent: 1.5em;
     text-justify: inter-word;
   }
