--- a/themes/roman/assets/scss/impression.scss
+++ b/themes/roman/assets/scss/impression.scss
@@ -119,7 +119,7 @@
   }
   .edition::before {
     border: 0;
-    display: left;
+    display: block;
     width: 152px;
     height: 12px;
     margin: .5em auto 0;
