--- a/themes/roman/layouts/partials/header.html
+++ b/themes/roman/layouts/partials/header.html
@@ -1,4 +1,5 @@
   <header>
+    <link href="https://fonts.google.com/specimen/Indie+Flower" rel="stylsheet" type="text/css">
     <nav class="site-navigation" role="navigation">
       {{ $current := . }}
   <ul>{{ range .Site.Menus.main }}
