--- a/themes/roman/assets/scss/styles.scss
+++ b/themes/roman/assets/scss/styles.scss
@@ -173,7 +173,7 @@ $brand-color: #90c2f1;
 $highlight: lighten ($brand-color, 35%);
 $text-color: #0b0404;
 $muted-text-color: #ff0095;
-$font-family: "EB Garamond",
+$font-family: "Indie+Flower",
 Garamond,
 "Times New Roman",
 serif;
